--- a/readme
+++ b/readme
@@ -2,3 +2,6 @@ lws_get_socket_fd(struct lws *wsi);
 
 lws_get_peer_addresses(struct lws *wsi, lws_sockfd_type fd, char *name,
 		       int name_len, char *rip, int rip_len);
+
+
+WSI_TOKEN_GET_URI
